# gitingest-agent-project

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_ANALYSIS_GUIDE.md  README.md  cli.py  extractor.py  pyproject.toml  storage.py  token_counter.py  workflow.py
.claude/: settings.local.json
docs/: architecture.md  bmm-workflow-status.yaml  prd-v2.0-roadmap.md  prd.md
execute/: .gitignore  cli.py  exceptions.py  extractor.py  main.py  post-refactor-coverage.txt  post-refactor-test-results.txt  pyproject.toml  storage.py  storage_manager.py  token_counter.py
execute/context/related-repos/: owner-django-workflow.md  owner-fastapi-architecture.md  owner-fastapi-installation.md  owner-repo-installation.md  owner-test-repo-installation.md  owner-test-repo-workflow.md
execute/tests/: __init__.py  test_cli.py  test_extractor.py  test_storage.py  test_storage_manager.py
explore/: claude-code-automation-patterns.md  click-framework-research.md  gitingest-cli-capabilities.md  path-detection-research.md  token-counting-research.md  uv-python-project-structure.md  workflow-design-notes.md
plan/: CLAUDE.md
tests/: test_cli.py  test_exceptions.py  test_extractor.py  test_storage.py  test_token_counter.py  test_workflow.py
user-context/: agent-config-files-note.md  bmad-v6-automated-upgrade.md  bmad-v6-upgrade-plan.md  chat1-handoff-notes.md  dev-agent-startup-prompt.md  documentation-audit-2025-11-03.md  gitingest-agent-comprehensive-specification-v2.md  gitingest-agent-project-overview.md  gitingest-agent-requirements-addendum-custom-enhancements.md  (+15 more)
(+39 files in other folders)
