[project]
name = "gitingest-agent"
version = "0.1.0"
description = "Automated GitHub repository analysis using GitIngest and Claude Code"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
gitingest-agent = "cli:gitingest_agent"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "cli.py",
    "token_counter.py",
    "workflow.py",
    "storage.py",
    "extractor.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
